func setup2fa
