# internal/controller/account/2fa_controller.go
@@ -1,9 +1,13 @@
 package account
 
 import (
+	"log"
+
 	"github.com/gin-gonic/gin"
 	"github.com/onlylight29/go-ecommerce-backend-api/global"
 	"github.com/onlylight29/go-ecommerce-backend-api/internal/model"
+	"github.com/onlylight29/go-ecommerce-backend-api/internal/service"
+	"github.com/onlylight29/go-ecommerce-backend-api/internal/utils/context"
 	"github.com/onlylight29/go-ecommerce-backend-api/pkg/response"
 	"go.uber.org/zap"
 )
@@ -12,6 +16,16 @@ var TwoFA = new(sUser2FA)
 
 type sUser2FA struct{}
 
+// User Registeration doc
+// @Summary      User Registeration
+// @Description  When user is registered send otp to email
+// @Tags         account management
+// @Accept       json
+// @Produce      json
+// @Param        Authorization header string true "Authorization token"
+// @Param        payload body model.SetupTwoFactorAuthInput true "payload"
+// @Success      200  {object}  response.ResponseData
+// @Router       /two_factor/setup [post]
 func (s *sUser2FA) SetupTwoFactorAuth(ctx *gin.Context) {
 	var params model.SetupTwoFactorAuthInput
 	if err := ctx.ShouldBindJSON(&params); err != nil {
@@ -19,4 +33,19 @@ func (s *sUser2FA) SetupTwoFactorAuth(ctx *gin.Context) {
 		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthSetupFailed)
 		return
 	}
+
+	userId, err := context.GetUserIdFromUUID(ctx.Request.Context())
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthSetupFailed)
+		return
+	}
+
+	log.Println("UserId::", userId)
+	params.UserId = uint32(userId)
+	codeResult, err := service.UserLogin().SetupTwoFactorAuth(ctx, &params)
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthSetupFailed)
+	}
+
+	response.SuccessResponse(ctx, codeResult, nil)
 }
